--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -13,7 +13,7 @@ permissions:
 jobs:
   test:
 
-    runs-on: tensorflow-latest
+    runs-on: ubuntu-latest
 
     steps:
     - uses: actions/checkout@v3
