--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -19,6 +19,7 @@ jobs:
     - uses: actions/checkout@v3
     - name: Install dependencies
       run: |
+        apt-get update && apt-get install ffmpeg libsm6 libxext6 
         python -m pip install --upgrade pip
         pip install -r requirements.txt
     - name: Test with unittest
