--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,7 +1,7 @@
 # This workflow will install Python dependencies, run tests and lint with a single version of Python
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-python
 
-name: Python application
+name: CI/CD
 
 on:
   pull_request:
@@ -14,12 +14,9 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-    - name: Install dependencies
+    - name: Build Docker image with tests
       run: |
-        sudo apt-get update
-        sudo apt-get install ffmpeg libsm6 libxext6 
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
-    - name: Test with unittest
+        docker build -t hairstyler-dev -f Dockerfile.dev .
+    - name: Run Docker image with  tests
       run: |
-        python -m unittest discover -v
+        docker run hairstyler-tests
