--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -16,7 +16,7 @@ jobs:
     - uses: actions/checkout@v3
     - name: Build Docker image with tests
       run: |
-        DOCKER_BUILDKIT=1 docker build -t hairstyler-dev -f Dockerfile.dev .
+        DOCKER_BUILDKIT=1 docker build -t hairstyler-tests -f Dockerfile.tests .
     - name: Run Docker image with  tests
       run: |
         docker run hairstyler-tests
