--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -14,6 +14,10 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
+    - name: Look directories
+      run: |
+        ls
+        ls ai
     - name: Build Docker image with tests
       run: |
         DOCKER_BUILDKIT=1 docker build -t hairstyler-tests -f Dockerfile.tests .
