--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 absl-py==1.3.0
 astunparse==1.6.3
+async-timeout==5.0.1
 cachetools==5.2.0
 certifi==2022.9.24
 charset-normalizer==2.1.1
@@ -31,8 +32,9 @@ protobuf==3.19.6
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
 pyparsing==3.0.9
+redis==5.2.1
 requests==2.28.1
-requests-oauthlib==1.3.1
+requests-oauthlib==1.3192.168.49.2.1
 rsa==4.9
 six==1.16.0
 tensorboard==2.11.0
